@@ -3,8 +3,10 @@ package org.sopt.certi_server.domain.userprecertification.service;
 import lombok.RequiredArgsConstructor;
 import org.sopt.certi_server.domain.certification.entity.Certification;
 import org.sopt.certi_server.domain.certification.repository.CertificationRepository;
+import org.sopt.certi_server.domain.certification.service.CertificationService;
 import org.sopt.certi_server.domain.user.entity.User;
 import org.sopt.certi_server.domain.user.repository.UserRepository;
+import org.sopt.certi_server.domain.user.service.UserService;
 import org.sopt.certi_server.domain.userprecertification.dto.request.UserPreCertificationRequest;
 import org.sopt.certi_server.domain.userprecertification.dto.response.PreCertificationSimple;
 import org.sopt.certi_server.domain.userprecertification.dto.response.PreCertificationSimpleListResponse;
@@ -22,6 +24,8 @@ import java.util.stream.Collectors;
 @Transactional(readOnly = true)
 public class UserPreCertificationService {
 
+    private final UserService userService;
+    private final CertificationService certificationService;
     private final UserPreCertificationRepository userPreCertificationRepository;
     private final UserRepository userRepository;
     private final CertificationRepository certificationRepository;
@@ -29,27 +33,20 @@ public class UserPreCertificationService {
     public PreCertificationSimpleListResponse getPreCertificationListDataByUserId(Long userId) {
         return new PreCertificationSimpleListResponse(userPreCertificationRepository.getPreCertificationsByUserId(userId).stream().map(
                 PreCertificationSimple::from
-        ).collect(Collectors.toList()));
+        ).toList());
     }
 
     @Transactional
     public void createNewPreCertification(Long userId, UserPreCertificationRequest request) {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new NotFoundException(ErrorCode.USER_NOT_FOUND)
-        );
-        Certification certification = certificationRepository.findById(request.certificationId())
-                .orElseThrow(() -> new NotFoundException(ErrorCode.DATA_NOT_FOUND)
-        );
+        User user = userService.getUser(userId);
+        Certification certification = certificationService.getCertification(request.certificationId());
         userPreCertificationRepository.save(UserPreCertification.create(user, certification));
     }
 
     @Transactional
     public void deletePreCertification(Long userId, Long certificationId) {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new NotFoundException(ErrorCode.USER_NOT_FOUND));
-        Certification certification = certificationRepository.findById(certificationId)
-                .orElseThrow(() -> new NotFoundException(ErrorCode.DATA_NOT_FOUND));
-
+        User user = userService.getUser(userId);
+        Certification certification = certificationService.getCertification(certificationId);
         userPreCertificationRepository.deleteByUserAndCertification(user, certification);
     }
 }
